# claude-kit

./: CLAUDE.md  LICENSE  README.md  bootstrap.sh  install.sh
.claude-plugin/: marketplace.json  plugin.json
agents/: researcher.md  reviewer.md  ux-auditor.md
autopilot/: loop.md  overnight.md  routines.md
guidelines/: core.md
hooks/: check-ai-tells.py  gate-destructive.py  hooks.json
settings/: README.md  autopilot.json  unattended.json
skills/doc-check/: SKILL.md
skills/kickoff/: SKILL.md
skills/review/: SKILL.md
skills/ship/: SKILL.md
stacks/node-service/: GUIDELINES.md  README.md
stacks/node-web/: GUIDELINES.md  README.md  tsconfig.base.json
stacks/node-web/.github/workflows/: ci.yml
stacks/rust/: .gitignore  Cargo.toml  GUIDELINES.md  README.md
stacks/rust/.github/workflows/: ci.yml
templates/nextjs-monorepo/: .gitignore  GUIDELINES.md  README.md
